--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-    <h1>Employee Assessment Form</h1>
+    <h1>Lunch Booking Form</h1>
 
     <!-- This is the message that will be shown when the form is closed -->
     <div id="message"></div>
