--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             var formContainer = document.getElementById("jotform-container");
             var messageContainer = document.getElementById("message");
 
-            if (hours >= 8 && hours < 5) {
+            if (hours >= 8 && hours < 17) { // 5 PM is 17 in 24-hour format
                 formContainer.style.display = "block"; // Show form
                 messageContainer.style.display = "none"; // Hide message
             } else {
