--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             } else {
                 formContainer.style.display = "none"; // Hide form
                 messageContainer.style.display = "block"; // Show message
-                messageContainer.innerHTML = "The form is only accessible between 8 AM and 5 AM.";
+                messageContainer.innerHTML = "The form is only accessible between 8 AM and 5 PM.";
             }
         }
 
